# Falling-Sand-Simulation

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  build.py  codebase_switcher_mi.py
src/: CellularMatrix.cpp  CellularMatrix.hpp  Chunk.hpp  IMatrix.hpp  Main.cpp
src/components/: ComponentManager.cpp  ComponentManager.hpp  Components.hpp
src/core/: CellularMatrix.cpp  CellularMatrix.hpp  Chunk.cpp  Chunk.hpp  Globals.hpp  IMatrix.hpp  Main.cpp  Renderer.cpp  Renderer.hpp  Utilities.cpp  Utilities.hpp
src/elements/: Element.cpp  Element.hpp  ElementColors.cpp  ElementColors.hpp  ElementFactory.cpp  ElementFactory.hpp  ElementType.cpp  ElementType.hpp  ElementTypes.hpp  ElementUtilities.cpp  ElementUtilities.hpp  Empty.hpp  EmptyElement.hpp  IMatrixAccess.hpp  PhysicsParticle.cpp  PhysicsParticle.hpp
src/elements/fires/: Fire.cpp  Fire.hpp
src/elements/gases/: Fire.cpp  Fire.hpp  Gas.cpp  Gas.hpp  Smoke.hpp  Steam.hpp
src/elements/liquids/: Liquid.cpp  Liquid.hpp  Oil.hpp  Water.hpp
src/elements/movable/: MovableElement.cpp  MovableElement.hpp
src/elements/particles/: PhysicsParticle.cpp  PhysicsParticle.hpp
src/elements/solids/: Solid.hpp
src/elements/static/: StaticElement.hpp
src/elements/traits/: DissolvableElement.cpp  DissolvableElement.hpp  SolvantElement.cpp  SolvantElement.hpp
src/matrix/: Chunk.cpp  Chunk.hpp  Matrix.cpp  Matrix.hpp
src/particles/: ParticleManager.cpp  ParticleManager.hpp
src/renderer/: Renderer.cpp  Renderer.hpp
src/ui/: DebugUI.cpp  DebugUI.hpp  ElementUI.cpp  ElementUI.hpp
(+44 files in other folders)
